second part of the job

--- a/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
+++ b/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
@@ -19,7 +19,11 @@
 </div>
 
 
-
+<div *ngIf="loader==true">
+  <div class="loader-overlay">
+      <div *ngIf="loader==true" class="loader"></div>
+  </div>
+</div>
 
 <!-- Main Body -->
 <section>
