--- a/src/app/pages/djagora-academy/scrum/edit-sprint/edit-sprint.component.html
+++ b/src/app/pages/djagora-academy/scrum/edit-sprint/edit-sprint.component.html
@@ -6,103 +6,97 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
     <div class="row">
       <div class="col-lg-12">
         <div class="banner-heading">
-          <h1 class="banner-title">Edit Sprint</h1>
+          <h1 class="banner-title">Edit Sprint/{{sprint.name}}</h1>
         </div>
       </div><!-- Col end -->
     </div><!-- Row end -->
   </div><!-- Container end -->
 </div><!-- Banner text end -->
 </div><!-- Banner area end -->
-
+<div *ngIf="loader==true">
+  <div class="loader-overlay">
+      <div *ngIf="loader==true" class="loader"></div>
+  </div>
+</div>
 <div class="titre">
 
-    <h1 name="1">Sprint name</h1>
+    <h1 name="1">{{sprint.name}}</h1>
 </div>
-
-
-
-
-
-<div class="example-container">
-  <h2>To do</h2>
-
-  <div cdkDropList #todoList="cdkDropList" [cdkDropListData]="todo" [cdkDropListConnectedTo]="[doneList]"
-    class="example-list" (cdkDropListDropped)="drop($event)">
-    <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
-  </div>
-</div>
-
-<div class="example-container">
-  <h2>Done</h2>
-
-  <div cdkDropList #doneList="cdkDropList" [cdkDropListData]="done" [cdkDropListConnectedTo]="[todoList]"
-    class="example-list" (cdkDropListDropped)="drop($event)">
-    <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
-  </div>
-</div>
-
-
-
-
-
-
-
 
 
 <!-- Main Body -->
 <section>
     <div class="container">
         <div class="btn_retour mb-3">
-            <button routerLink="/sprint"><a>🢀 Back</a></button>
+            <button [routerLink]='["/sprint",sprint.project_id]'><a>🢀 Back</a></button>
           </div>
         <div class=" ">
-            <form class="" >
+            <form [formGroup]="SprintForm" >
               <div class="row justify-content-center">
                 <div class="col-md-4 mb-4 mx-4">
                   <label for="validationServer01">Title</label>
-                  <input  type="text" class="form-control p-3" id="validationServer01"
+                  <input  type="text" class="form-control p-3" id="validationServer01" formControlName="name" [(ngModel)]="sprint.name"
                     placeholder="Project title">
                 </div>
-                <div class="col-md-4     mb-4 mx-4 ">
-                  <label for="validationServer02">Domain</label>
-                  <input type="text"  class="form-control p-3" placeholder="Domain" required>
-                </div>
+              
               </div>
               <div class="row justify-content-center">
                 <div class="col-md-4 mb-4 mx-4">
-                  <label for="validationServer04">Image</label>
-                  <input   type="file" class="form-control p-1" id="validationServer04" required>
+                  <label for="validationServer04">Start date</label>
+                  <input   type="date" class="form-control p-1" id="validationServer04" formControlName="start_date" [ngModel]="sprint.start_date| date :'yyyy/dd/mm'" required>
                 </div>
                 <div class="col-md-4 mb-4 mx-4">
-                  <label for="validationServer03">Nombre de stagaires</label>
-                  <input type="number"  class="form-control p-3"
+                  <label for="validationServer03">End date</label>
+                  <input type="date"  class="form-control p-3" formControlName="end_date" [(ngModel)]="sprint.end_date"
                     placeholder="Nombre de stagaires..." required>
                 </div>
               </div>
             
             
               <div class="row justify-content-center">
-                <button class="btn btn-primary col-md-2" type="submit">Submit</button>
+                <button class="btn  col-md-2" style="background-color: #0081c2;color:white;" type="submit" (click)="editSprint()">Save changes</button>
               </div>
             </form>
           </div>
         <div class="row">
-          <div class="col-sm-5 col-md-6 col-12 pb-4">
-            <div class="comment  mt-4 col-md-12 text-justify float-left" *ngFor="let story of userStories" >
+
+
+
+
+
+
+         
+          <div class="col-sm-5 col-md-6 col-12 " cdkDropList #todoList="cdkDropList" [cdkDropListData]="userStories" [cdkDropListConnectedTo]="[doneList]"
+          (cdkDropListDropped)="drop($event)">
+          <h2 class="my-4" style="color: #0081c2;" >Pending user stories</h2>
+         
+            <div class="comment   col-md-12 text-justify float-left" *ngFor="let story of userStories" cdkDrag>
               <h4 style="color: #0081c2;">{{story.name}}</h4>
               <span> | {{story.estimated_date}}</span>
     
               <br>
               <p>{{story.description}}</p>
             </div>
-          
+            <h4 *ngIf="userStories.length==0"  style="color: gray; margin-top: 3%;margin-bottom: 3%;">
+              No pending user stories yet</h4>
           </div>
-            <div class="col-lg-6 col-md-5 col-sm-4  col-12 mt-4">
+
+
+
+
+
+
+          
+            <div class="col-lg-6 col-md-5 col-sm-4  col-12 ">
+              <h2 class="my-4" style="color: #0081c2;" >Sprint user stories</h2>
+
                 <div class="">
 
                     <div class="row  ">
+                      
                         <div class="">
                           <div class="card card-margin" >
+                            
                             <div class="card-header no-border">
                             </div>
                             <div class="card-body pt-0">
@@ -122,14 +116,37 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                                         <li class="widget-49-meeting-item"><span>Session timeout increase to 30 minutes</span></li>
                                     </ol>
                                     <div class="widget-49-meeting-action">
-                                        <button class="btn btn-warning" [routerLink]='["/editsprint",sprint.id]'>edit </button>
                                         <button  class="btn btn-dark ml-2 btn-flash-border-primary" routerLink="/boards">Check board</button>
                                     </div>
                                 </div>
                             </div>
+                            
                         </div>
+
+                        
                         </div>
+                       
                       
+          <div class="col-sm-5 col-md-12 col-12 pb-4" cdkDropList #doneList="cdkDropList" [cdkDropListData]="affected" [cdkDropListConnectedTo]="[todoList]"
+           (cdkDropListDropped)="drop($event)">
+           <h2 class="my-4" style="color: #0081c2;" >Affected user stories</h2>
+
+           <h4 *ngIf="affected.length==0"  style="color: gray; margin-top: 3%;margin-bottom: 3%;">
+            No Affected user stories yet</h4>
+            <div class="drag-image">
+              <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
+              <h6>Drag & Drop user stories below</h6>
+            </div>
+            <div class="comment  mt-4 col-md-12 text-justify float-left" *ngFor="let story of affected" cdkDrag>
+              <h4 style="color: #0081c2;">{{story.name}}</h4>
+              <span> | {{story.estimated_date}}</span>
+    
+              <br>
+              <p>{{story.description}}</p>
+            </div>
+          
+          </div>
+
                         
                     </div>
                     
