--- a/src/app/pages/djagora-academy/scrum/sprints/sprints.component.css
+++ b/src/app/pages/djagora-academy/scrum/sprints/sprints.component.css
@@ -1,3 +1,56 @@
+
+  
+  
+  
+  
+  
+.btn_retour button {
+  background: transparent;
+  cursor: pointer;
+  color: #0081C2;
+  border: 2px solid #0081c2;
+  border-radius: 5px;
+  transition: background 0.5s;
+  padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.btn_retour {
+  max-width: 23%;
+  padding: 5px 0px;
+
+  position: relative;
+  
+ 
+  
+
+}
+
+.btn_retour button:hover {
+  color: white;
+  background: #0081c2;
+  border-color: #0081c2;
+}
+
+.btn_retour button:hover {
+  color: white;
+  background: #0081c2;
+  border-color: #0081c2;
+}
+  
+
+
+.wrapper1 {
+  margin-left: 1em;
+  margin-right: 1em;
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 1em;
+  grid-column-gap: 1em;
+}
 .titre {
   justify-content: center;
   margin: 50px auto 50px;
