--- a/src/app/pages/djagora-academy/scrum/backlog/backlog.component.css
+++ b/src/app/pages/djagora-academy/scrum/backlog/backlog.component.css
@@ -1,3 +1,115 @@
+
+
+
+
+
+
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 100000000; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+    margin-top: 10%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+  margin-left: 97%;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  .customRadio input[type="radio"]+label:after {
+    content: '';
+    background: #311B92;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    opacity: 0;
+    transform: scale(2);
+    transition: transform 0.3s linear, opacity 0.3s linear;
+  }
+  
+  .customRadio input[type="radio"]:checked+label:after {
+    opacity: 1;
+    transform: scale(1);
+  }
+  
+  
+  
+  
+  .customRadio input[type="radio"] {
+    position: absolute;
+    left: -9999px;
+  }
+  
+  .customRadio input[type="radio"]+label {
+    position: relative;
+    padding: 3px 0 0 40px;
+    cursor: pointer;
+  }
+  
+  .customRadio input[type="radio"]+label:before {
+    content: '';
+    background: #fff;
+    border: 2px solid #0081C2;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  
+
+
+
+
+
+
+
+
+
+
+
 .titre {
     justify-content: center;
     margin: 50px auto 50px;
